--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/gamer_profile_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/gamer_profile_stats.html
@@ -1,16 +1,44 @@
 <div class="gamer_profle_info">
     {%if selected_gamer_profiles%}
     {%for g in selected_gamer_profiles%}
-
-    <div class="game_name">{{g.game}}</div>
-    <div class="game_rank">{{g.rank}}</div>
-    <div class="game_server">{{g.server}}</div>
+    <div>
+        <div class="game_name" style="display: none;">{{g.game}}</div>
+        <div class="game_stat">
+            <span class="label"><i class="fa-solid fa-ranking-star"></i>Rank:</span>
+            <span>
+                {{g.rank}}</span>
+        </div>
+        <div class="game_stat">
+            <span class="label"><i class="fa-solid fa-server"></i>Server:</span>
+            <span>
+                {{g.server}}</span>
+        </div>
+        <div class="game_stat">
+            <span class="label"><i class="fa-solid fa-server"></i>Allow Matchmaking:</span>
+            <span>
+                <i class="fa-solid fa-toggle-on"></i></span>
+        </div>
+    </div>
 
     {%endfor%}
 
     {%else%}
-    <div class="game_name">{{main_game_profile.main_gamer_profile.game}}</div>
-    <div class="game_rank">{{main_game_profile.main_gamer_profile.rank}}</div>
-    <div class="game_server">{{main_game_profile.main_gamer_profile.server}}</div>
+    <!-- <div class="game_name">{{main_game_profile.main_gamer_profile.game}}</div> -->
+    <div class="game_name" style="display: none;">{{g.game}}</div>
+    <div class="game_stat">
+        <span class="label"><i class="fa-solid fa-ranking-star"></i>Rank:</span>
+        <span>
+            {{main_game_profile.main_gamer_profile.rank}}</span>
+    </div>
+    <div class="game_stat">
+        <span class="label"><i class="fa-solid fa-server"></i>Server:</span>
+        <span>
+            {{main_game_profile.main_gamer_profile.server}}</span>
+    </div>
+    <div class="game_stat">
+        <span class="label"><i class="fa-solid fa-server"></i>Allow Matchmaking:</span>
+        <span>
+            <button><i class="fa-solid fa-toggle-on" style="font-size: large;  padding:0px"></i></button></span>
+    </div>
     {%endif%}
 </div>
