--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -13,6 +13,7 @@
     --secondary_bg_color: rgb(37, 37, 37);
     --tertiary1_bg_color: rgb(51, 51, 51);
     --post_bg_color: #1d1c1c;
+    --text-primary-color: rgb(255, 255, 255);
     --text-secondary-color: rgb(173, 173, 173);
 }
 
@@ -1094,6 +1095,7 @@ h2::-webkit-scrollbar {
     width: 85%;
     left: 25px;
     border-radius: 10px;
+    z-index: 2;
 }
 
 .gamer_profiles_dropdown button {
@@ -1144,7 +1146,38 @@ h2::-webkit-scrollbar {
 }
 
 
-.gamer-profile-sidebar .page-links {}
+.gamer-profile-sidebar .page-links {
+    display: flex;
+    flex-direction: column;
+}
+
+.gamer-profile-sidebar .page-links {
+    /* background: none !important; */
+    margin: 7px 15px;
+}
+
+
+.gamer-profile-sidebar .page-links .page-link {
+    background-color: var(--tertiary1_bg_color);
+    margin: 10px;
+    border-radius: 25px;
+    /* padding: 10px; */
+    border: none;
+    color: var(--text-secondary-color);
+    font-weight: bold;
+
+}
+
+
+.page-link a:hover {
+    color: var(--text-primary-color);
+}
+
+.gamer-profile-sidebar .page-links .page-link:hover {
+    background-color: var(--primary_color);
+    color: var(--text-primary-color);
+}
+
 
 /* Gamer profile sidebar end */
 
