added some css to sidebar of game profile page

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar.html
@@ -22,31 +22,8 @@
         <div class="gamer_profile_stats_section">
             {%include 'gamerProfile/gamer_profile_stats.html' %}
         </div>
-        <div class="page-links">
-            <button class="page-link" onclick="location.href=`{% url 'matchmaking-home' user%}`">
-                <a href="{% url 'matchmaking-home' user%}">
 
-                    Matchmaking
-                </a>
-            </button>
-
-            <button class="page-link" onclick="location.href=`{% url 'create-gamer-profile' user.username %}`">
-                <a href="{% url 'create-gamer-profile' user.username %}">
-
-                    Create New Gamer Profile
-                </a>
-            </button>
-
-            {%if gamer_profiles %}
-            <button class="page-link" onclick="location.href=`{% url 'edit-gamer-profile' user.username %}`">
-                <a href="{% url 'edit-gamer-profile' user.username %}">
-
-                    Edit Gamer Profile
-                </a>
-            </button>
-
-            {%endif%}
-        </div>
+        {%include 'navigation/sidebar_page_links.html' %}
         {%endif%}
     </div>
 
