Edit/Create Gamer Profile page- sidebar top fixed

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page.html
@@ -61,9 +61,8 @@ Page3 - Community
         </div>
 
         <div class="sidebar community-sidebar">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit doloribus ipsa, vel suscipit
-            omnis quas cumque magnam deserunt accusamus neque tempora iusto, repellat cupiditate saepe totam sit natus,
-            alias fuga.
+
+            {% include 'community/community_page_sidebar.html' %}
         </div>
     </div>
 </div>
