--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/gamer_profile_page_sidebar.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/gamer_profile_page_sidebar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="gamer-profile-page-sidebar">
+<div class="gamer-profile-sidebar">
     <div class="header">
         <div class="header-noimg"></div>
         <div class="profile">
