--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -10,11 +10,13 @@
     --primary_color: #d46ed4;
     --grey_color: rgba(217, 216, 216, 0.6);
     --bg_color: #131212;
+    --border-color: rgb(173, 173, 173, 0.25);
     --secondary_bg_color: rgb(37, 37, 37);
     --tertiary1_bg_color: rgb(51, 51, 51);
     --post_bg_color: #1d1c1c;
     --text-primary-color: rgb(255, 255, 255);
     --text-secondary-color: rgb(173, 173, 173);
+    --text-secondary2-color: rgb(212, 211, 211);
 }
 
 a {
@@ -949,7 +951,7 @@ p::-webkit-scrollbar {
     overflow-x: hidden;
     overflow-y: auto;
     padding: 10px;
-    /* margin-top: 100px; */
+
     border-radius: 10px;
     max-height: 800px;
     position: sticky;
@@ -986,6 +988,20 @@ p::-webkit-scrollbar {
     border-bottom: 1px solid var(--grey_color);
     margin: 5px;
     overflow: hidden;
+}
+
+.sidebar-section-title {
+    text-align: start;
+    width: 100%;
+    color: var(--grey_color);
+    font-size: medium;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    border-bottom: 1px solid var(--border-color);
+    margin: 5px 5px 15px 5px;
+    overflow: hidden;
+    font-weight: bold;
+    /* text-transform: uppercase; */
 }
 
 /* width */
@@ -1028,7 +1044,7 @@ h2::-webkit-scrollbar {
 
 .gamer-profile-sidebar {
     border-radius: 10px;
-    padding: 10px;
+    padding-bottom: 10px;
     background-color: var(--secondary_bg_color);
     width: 100%;
     position: relative;
@@ -1231,25 +1247,30 @@ h2::-webkit-scrollbar {
     font-weight: bold;
 }
 
-.gamer-profile-page-sidebar .header-noimg {
+.gamer-profile-sidebar {
+    width: 100%;
+}
+
+.gamer-profile-sidebar .header-noimg {
+    border-radius: 10px 10px 0 0;
     height: 75px;
     width: 100% !important;
     background-color: var(--primary_color);
 }
 
-.gamer-profile-page-sidebar .profile {
+.gamer-profile-sidebar .profile {
     display: flex;
     flex-direction: column;
     position: relative;
     top: -50px;
 }
 
-.gamer-profile-page-sidebar .profile-identity {
+.gamer-profile-sidebar .profile-identity {
     font-size: small;
     font-weight: bold;
 }
 
-.gamer-profile-page-sidebar .profile-identity img {
+.gamer-profile-sidebar .profile-identity img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -1257,24 +1278,24 @@ h2::-webkit-scrollbar {
     border: 5px solid var(--post_bg_color);
 }
 
-.gamer-profile-page-sidebar .profile-info {
+.gamer-profile-sidebar .profile-info {
     padding: 10px;
     display: flex;
     justify-content: space-around;
     font-size: small;
 }
 
-.gamer-profile-page-sidebar .data {
+.gamer-profile-sidebar .data {
     font-weight: bold;
-    color: var(--text-primary-color);
+    color: var(--text-secondary2-color);
 }
 
-.gamer-profile-page-sidebar .label {
+.gamer-profile-sidebar .label {
     color: var(--text-secondary-color);
     font-weight: bold;
 }
 
-.gamer-profile-page-sidebar .info-item {
+.gamer-profile-sidebar .info-item {
     background-color: var(--secondary_bg_color);
     padding: 10px 20px;
     border-radius: 5px;
@@ -1733,7 +1754,13 @@ button {
 
 }
 
+/* Community page sidebar start */
 
+.community-page-sidebar .label {
+    color: var(--text-secondary-color);
+}
+
+/* Community page sidebar end */
 
 /* Media Queries */
 
